Somew whitespace fixes

--- a/housexml.css
+++ b/housexml.css
@@ -1,43 +1,11 @@
-stress {
-    font-weight: bold;
+p.bodyPara {
 }
 
-foreign {
-    font-style: italic;
-}
-
-mention {
-    font-style: italic;
-}
-
-#bodyPara {
-    font-size: 14px;
-}
-
-h1.title {
+div.billTitle {
     font-size: 32px;
-    color: blue;
+    text-align: center;
 }
 
-h2.author {
-    font-size: 24px;
-    color: green;
-}
-
-h3.date {
-    font-size: 20px;
-    color: green;
-}
-
-body {
-    -moz-border-radius: 15px;
-    border-radius: 15px;
-    border-style: solid;
-    border-color: #abcdef;
-    padding: 10px;
-}
-
-a.fn {
-    font-size: 12px;
-    vertical-align: super;
+span.header {
+    font-weight: bold;
 }
